Lagt tillbaka sidmenyn på sidan news.html

--- a/news.html
+++ b/news.html
@@ -31,48 +31,59 @@
     </header>
     <main>
         <h1>Nyheter</h1>
-        <div class="news-page-container">
-            <article class="news-page-article">
-                <img src="images/mira.jpg" alt="Bild på katt">
-                <div class="news-page-text">
-                    <h3>Nykomlingar på Fur Seasons</h3>
-                    <p><i>2025-05-20</i></p>
-                    <p>Den här veckan har vi tagit emot två nya katter - Mira och Sigge. Båda två är under
-                        inskolning just nu och kommer så småningom att vara redo för adoption...</p>
-                    <a href="news-article.html">Läs mer</a>
-                </div>
-            </article>
-            <article class="news-page-article">
-                <img src="images/news1.jpg" alt="Bild på katt">
-                <div class="news-page-text">
-                    <h3>Stort tack till våra givare!</h3>
-                    <p><i>2025-05-15</i></p>
-                    <p>Vi vill rikta ett stort tack till alla er som har stöttat oss med tid, engagemang, gåvor och
-                        kärlek. Tack vare er har många katter fått en ny chans i livet....</p>
-                    <a href="news-article.html">Läs mer</a>
-                </div>
-            </article>
-            <article class="news-page-article">
-                <img src="images/news2.jpg" alt="Bild på katt">
-                <div class="news-page-text">
-                    <h3>Två katter har fått nya hem</h3>
-                    <p><i>2025-05-14</i></p>
-                    <p>Vi är glada att meddela att Pelle och Rune har fått flytta till sina nya hem! Efter en tid
-                        hos oss, där de fått både vila, mat och trygghet, har de nu packat sina små väskor...</p>
-                    <a href="news-article.html">Läs mer</a>
-                </div>
-            </article>
-            <article class="news-page-article">
-                <img src="images/tindra.jpg" alt="Bild på katt">
-                <div class="news-page-text">
-                    <h3>Nykomling på Fur Seasons</h3>
-                    <p><i>2025-05-10</i></p>
-                    <p>Idag har katten Tindra flyttat in hos oss, och vi är så glada att få välkomna henne till Fur
-                        Seasons. Redan första timmarna har hon spanat in alla hörn och hittat sin favoritplats i
-                        solen....</p>
-                    <a href="news-article.html">Läs mer</a>
-                </div>
-            </article>
+        <div class="news-page">
+            <div class="news-page-container">
+                <article class="news-page-article">
+                    <img src="images/mira.jpg" alt="Bild på katt">
+                    <div class="news-page-text">
+                        <h3>Nykomlingar på Fur Seasons</h3>
+                        <p><i>2025-05-20</i></p>
+                        <p>Den här veckan har vi tagit emot två nya katter - Mira och Sigge. Båda två är under
+                            inskolning just nu och kommer så småningom att vara redo för adoption...</p>
+                        <a href="news-article.html">Läs mer</a>
+                    </div>
+                </article>
+                <article class="news-page-article">
+                    <img src="images/news1.jpg" alt="Bild på katt">
+                    <div class="news-page-text">
+                        <h3>Stort tack till våra givare!</h3>
+                        <p><i>2025-05-15</i></p>
+                        <p>Vi vill rikta ett stort tack till alla er som har stöttat oss med tid, engagemang, gåvor och
+                            kärlek. Tack vare er har många katter fått en ny chans i livet....</p>
+                        <a href="news-article.html">Läs mer</a>
+                    </div>
+                </article>
+                <article class="news-page-article">
+                    <img src="images/news2.jpg" alt="Bild på katt">
+                    <div class="news-page-text">
+                        <h3>Två katter har fått nya hem</h3>
+                        <p><i>2025-05-14</i></p>
+                        <p>Vi är glada att meddela att Pelle och Rune har fått flytta till sina nya hem! Efter en tid
+                            hos oss, där de fått både vila, mat och trygghet, har de nu packat sina små väskor...</p>
+                        <a href="news-article.html">Läs mer</a>
+                    </div>
+                </article>
+                <article class="news-page-article">
+                    <img src="images/tindra.jpg" alt="Bild på katt">
+                    <div class="news-page-text">
+                        <h3>Nykomling på Fur Seasons</h3>
+                        <p><i>2025-05-10</i></p>
+                        <p>Idag har katten Tindra flyttat in hos oss, och vi är så glada att få välkomna henne till Fur
+                            Seasons. Redan första timmarna har hon spanat in alla hörn och hittat sin favoritplats i
+                            solen....</p>
+                        <a href="news-article.html">Läs mer</a>
+                    </div>
+                </article>
+            </div>
+            <aside class="news-menu">
+                <h2>Arkiv</h2>
+                <ul>
+                    <li><a href="news-article.html">Nykomlingar på Fur Seasons</a></li>
+                    <li><a href="news-article.html">Stort tack till våra givare!</a></li>
+                    <li><a href="news-article.html">Två katter har fått nya hem</a></li>
+                    <li><a href="news-article.html">Nykomling på Fur Seasons</a></li>
+                </ul>
+            </aside>
         </div>
     </main>
     <footer>
