Lagt till en section runt nyheterna på första sidan. Lagt till författare på alla nyheter. Ändrat README-filen.

--- a/about.html
+++ b/about.html
@@ -45,22 +45,25 @@
                 kan vi
                 göra skillnad, en katt i taget.</p>
         </div>
-        <h2>Våra medarbetare</h2>
-        <div class="news-container">
-            <article class="news-article">
-                <img src="images/staff1.jpg" alt="Bild på katt">
-                <h3>Emma Larsson - Grundare</h3>
-                <p>Emma är hjärtat bakom hela verksamheten. Det började med en ensam katt på en bakgård och har vuxit
-                    till ett tryggt hem för många fler. Med ett lugnt tålamod och ett brinnande engagemang har Emma
-                    skapat en plats där varje katt får en ny chans.</p>
-            </article>
-            <article class="news-article">
-                <img src="images/staff2.jpg" alt="Bild på katt">
-                <h3>Anton Eriksson</h3>
-                <p>Anton är den som alltid är på plats. Han fixar, gosar, matar och lyssnar. Med en värme och
-                    energi som smittar av sig har han blivit en favorit både bland katterna och besökarna.</p>
-            </article>
-        </div>
+        <section>
+            <h2>Våra medarbetare</h2>
+            <div class="news-container">
+                <article class="news-article">
+                    <img src="images/staff1.jpg" alt="Bild på katt">
+                    <h3>Emma Larsson - Grundare</h3>
+                    <p>Emma är hjärtat bakom hela verksamheten. Det började med en ensam katt på en bakgård och har
+                        vuxit
+                        till ett tryggt hem för många fler. Med ett lugnt tålamod och ett brinnande engagemang har Emma
+                        skapat en plats där varje katt får en ny chans.</p>
+                </article>
+                <article class="news-article">
+                    <img src="images/staff2.jpg" alt="Bild på katt">
+                    <h3>Anton Eriksson</h3>
+                    <p>Anton är den som alltid är på plats. Han fixar, gosar, matar och lyssnar. Med en värme och
+                        energi som smittar av sig har han blivit en favorit både bland katterna och besökarna.</p>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
         <h3>Kontaktinformation</h3>
