--- a/cat-article.html
+++ b/cat-article.html
@@ -30,21 +30,18 @@
         </div>
     </header>
     <main>
-        <h1>Våra katter</h1>
+        <h1>Mira</h1>
         <div class="cat-article">
             <img src="images/mira.jpg" alt="Bild på katt">
             <div class="cat-text">
-                <h3>Mira</h3>
-                <p><b>Född:</b> 2022-06-15 (uppskattad ålder)</p>
-                <p><b>Kön:</b> Hona</p>
-                <p><b>Beskrivning:</b> Mira är liten till växten, men bär på en själ som tar plats. Hon
+                <p>Mira är liten till växten, men bär på en själ som tar plats. Hon
                     hittades ensam på ett sommarstugeområde, där hon lärde sig att både klättra, gömma sig och hålla
                     koll på omgivningen med mästerlig precision. Hon är nyfiken och försiktig på samma gång. Det är som
                     att hon alltid räknar till tre innan hon gör något. Men när hon känner sig trygg, då lämnar hon inte
                     din sida. Mira söker ett lugnt hem, gärna med fönsterplats och människor som respekterar att det
                     ibland tar lite tid att bygga tillit.</p><br>
-                <p>Är du intresserad av att adoptera en katt? Kontakta oss genom vårat kontaktformulär.</p><br>
-                 <button onclick="location.href='contact.html'">Kontakt</button>
+                <p><b>Född:</b> 2022-06-15 (uppskattad ålder)</p><br>
+                <p><b>Kön:</b> Hona</p>
             </div>
         </div>
     </main>
