--- a/cats.html
+++ b/cats.html
@@ -30,41 +30,35 @@
         </div>
     </header>
     <main>
-        <h1>Våra katter</h1>
-        <div class="news-container">
-            <article class="news-article">
-                <img src="images/mira.jpg" alt="Bild på katt">
-                <h3>Mira</h3>
-                <p><b>Född:</b> 2022-06-15 (uppskattad ålder)</p>
-                <p><b>Kön:</b> Hona</p>
-                <p><b>Beskrivning:</b> Mira är liten till växten, men har en själ som tar plats...</p>
-                <a href="cat-article.html">Läs mer</a>
-            </article>
-            <article class="news-article">
-                <img src="images/sigge.jpg" alt="Bild på katt">
-                <h3>Sigge</h3>
-                <p><b>Född:</b> 2020-11-30 (uppskattad ålder)</p>
-                <p><b>Kön:</b> Hane</p>
-                <p><b>Beskrivning:</b> Sigge har den där klassiska katt-karisman, han är självsäker...</p>
-                <a href="cat-article.html">Läs mer</a>
-            </article>
-            <article class="news-article">
-                <img src="images/tindra.jpg" alt="Bild på katt">
-                <h3>Tindra</h3>
-                <p><b>Född:</b> 2018-09-20 (uppskattad ålder)</p>
-                <p><b>Kön:</b> Hona</p>
-                <p><b>Beskrivning:</b> Tindra levde sina första år som älskad innekatt...</p>
-                <a href="cat-article.html">Läs mer</a>
-            </article>
-            <article class="news-article">
-                <img src="images/rufus.jpg" alt="Bild på katt">
-                <h3>Rufus</h3>
-                <p><b>Född:</b> 2023-01-10 (uppskattad ålder)</p>
-                <p><b>Kön:</b> Hane</p>
-                <p><b>Beskrivning:</b> Rufus är ung och orädd, ett yrväder som älskar att leka...</p>
-                <a href="cat-article.html">Läs mer</a>
-            </article>
-        </div>
+        <section>
+            <h1>Våra katter</h1>
+            <div class="news-container">
+                <article class="news-article">
+                    <img src="images/mira.jpg" alt="Bild på katt">
+                    <h3>Mira</h3>
+                    <p>Mira är liten till växten, men har en själ som tar plats...</p>
+                    <a href="cat-article.html">Läs mer</a>
+                </article>
+                <article class="news-article">
+                    <img src="images/sigge.jpg" alt="Bild på katt">
+                    <h3>Sigge</h3>
+                    <p>Sigge har den där klassiska katt-karisman, han är självsäker...</p>
+                    <a href="cat-article.html">Läs mer</a>
+                </article>
+                <article class="news-article">
+                    <img src="images/tindra.jpg" alt="Bild på katt">
+                    <h3>Tindra</h3>
+                    <p>Tindra levde sina första år som älskad innekatt...</p>
+                    <a href="cat-article.html">Läs mer</a>
+                </article>
+                <article class="news-article">
+                    <img src="images/rufus.jpg" alt="Bild på katt">
+                    <h3>Rufus</h3>
+                    <p>Rufus är ung och orädd, ett yrväder som älskar att leka...</p>
+                    <a href="cat-article.html">Läs mer</a>
+                </article>
+            </div>
+        </section>
     </main>
     <footer>
         <h3>Kontaktinformation</h3>
