--- a/index.html
+++ b/index.html
@@ -40,30 +40,32 @@
             </p>
         </div>
         <button onclick="location.href='cats.html'">Se våra katter</button>
-        <h2>Nyheter</h2>
-        <div class="news-container">
-            <article class="news-article">
-                <img src="images/mira.jpg" alt="Bild på katt">
-                <h3>Nykomlingar på Fur Seasons</h3>
-                <p><i>2025-05-20</i></p>
-                <p>Den här veckan har vi tagit emot två nya katter...</p>
-                <a href="news-article.html">Läs mer</a>
-            </article>
-            <article class="news-article">
-                <img src="images/news1.jpg" alt="Bild på katt">
-                <h3>Stort tack till våra givare!</h3>
-                <p><i>2025-05-15</i></p>
-                <p>Vi vill rikta ett stort tack till alla er som har stöttat oss...</p>
-                <a href="news-article.html">Läs mer</a>
-            </article>
-            <article class="news-article">
-                <img src="images/news2.jpg" alt="Bild på katt">
-                <h3>Två katter har fått nya hem</h3>
-                <p><i>2025-05-14</i></p>
-                <p>Vi glada att meddela att Pelle och Rune har fått flytta...</p>
-                <a href="news-article.html">Läs mer</a>
-            </article>
-        </div>
+        <section>
+            <h2>Nyheter</h2>
+            <div class="news-container">
+                <article class="news-article">
+                    <img src="images/mira.jpg" alt="Bild på katt">
+                    <h3>Nykomlingar på Fur Seasons</h3>
+                    <p><i>2025-05-20 | Emma Larsson</i></p>
+                    <p>Den här veckan har vi tagit emot två nya katter...</p>
+                    <a href="news-article.html">Läs mer</a>
+                </article>
+                <article class="news-article">
+                    <img src="images/news1.jpg" alt="Bild på katt">
+                    <h3>Stort tack till våra givare!</h3>
+                    <p><i>2025-05-15 | Emma Larsson</i></p>
+                    <p>Vi vill rikta ett stort tack till alla er som har stöttat oss...</p>
+                    <a href="news-article.html">Läs mer</a>
+                </article>
+                <article class="news-article">
+                    <img src="images/news2.jpg" alt="Bild på katt">
+                    <h3>Två katter har fått nya hem</h3>
+                    <p><i>2025-05-14 | Emma Larsson</i></p>
+                    <p>Vi glada att meddela att Pelle och Rune har fått flytta...</p>
+                    <a href="news-article.html">Läs mer</a>
+                </article>
+            </div>
+        </section>
         <button onclick="location.href='news.html'">Se alla nyheter</button>
     </main>
     <footer>
