--- a/news-article.html
+++ b/news-article.html
@@ -30,12 +30,11 @@
         </div>
     </header>
     <main>
-        <h1>Nyheter</h1>
+        <h1>Nykomlingar på Fur Seasons</h1>
         <div class="cat-article">
             <img src="images/mira.jpg" alt="Bild på katt">
             <div class="cat-text">
-                <h3>Nykomlingar på Fur Seasons</h3>
-                <p><i>2025-05-20</i></p>
+                <p><i>2025-05-20 | Emma Larsson</i></p>
                 <p>Den här veckan har vi tagit emot två nya katter - Mira och Sigge. Båda två är under inskolning just
                     nu och kommer så småningom att vara redo för adoption. Tills dess ger vi dem allt de behöver,
                     framförallt massor av trygghet och kärlek.</p><br>
